--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "player"]
 	path = player
 	url = git@github.com:IoTcat/player.git
+[submodule "api"]
+	path = api
+	url = git@github.com:IoTcat/acg.watch-api.git
